<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="event_date">Event date</string>
    <string name="event_type">Event type</string>
    <string name="event_description">Event description</string>
    <string name="button_description">Add event button</string>
    <string name="login_button">Sign in with email</string>
    <string name="guest_button">Sign in as guest</string>
    <string name="login">Login</string>"

    <!-- Event type drop down -->
    <string-array name="event_types">
        <item>Festival</item>
        <item>Concert</item>
        <item>Exhibition</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeline">Timeline</string>
    <string name="favorites">Favorites</string>
    <string name="map">Map</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="event_image">Event image</string>
    <string name="add_Event">Add event</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="user_info_title">User info</string>
    <string name="action_logout">Logout</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">User Name</string>
    <string name="user_email">user@example.com</string>
    <string name="user_photo">User photo</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="delete_event">Delete Event</string>
    <string name="cancel">Cancel</string>
    <string name="update_event">Update Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="created_by">Created by</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="date_label">Date label</string>
    <string name="description_label">Description label</string>
    <string name="close">Close</string>
    <string name="location_label">Location label</string>
    <string name="calendar">Calendar</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="sunday_short">Sun</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="no_events">No events on this day</string>
    <string name="events_for_day">Events for %1$s</string>
</resources>