<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_timeline"
        android:enabled="true"
        android:icon="@drawable/baseline_table_rows_24"
        android:title="@string/timeline"/>

    <item
        android:id="@+id/fragment_favorites"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/fragment_add_event"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add_Event"/>

    <item
        android:id="@+id/fragment_map"
        android:enabled="true"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map"/>
</menu>