<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/amaranth_purple"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/baseline_account_circle_24"
        android:contentDescription="@string/user_photo" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:paddingTop="8dp"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:paddingBottom="8dp"
        android:text="@string/user_email" />


</LinearLayout>