<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/remove_favorite_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/remove_from_favorites"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/baseline_favorite_24"
            app:tint="@android:color/holo_red_dark" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <!-- Type -->
            <TextView
                android:id="@+id/event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_type"
                android:textAppearance="?attr/textAppearanceTitleSmall" />

        </LinearLayout>

        <!-- Image -->
        <ImageView
            android:id="@+id/event_photo"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/event_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/brat_tour" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>