<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <!-- App name -->
    <TextView
        android:id="@+id/text_view_app_name"
        style="?textAppearanceHeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Login button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="350dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_app_name"
        app:icon="@drawable/baseline_login_24" />

    <!-- Guest button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/guest_button"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="350dp"
        android:text="@string/guest_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_app_name"
        app:icon="@drawable/baseline_account_circle_24" />

</androidx.constraintlayout.widget.ConstraintLayout>