<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragment_timeline">

    <fragment
        android:id="@+id/fragment_timeline"
        android:name="dk.itu.moapd.copenhagenbuzz.frnw.fragments.TimelineFragment"
        android:label="@string/timeline"
        tools:layout="@layout/fragment_timeline" >
        <action
            android:id="@+id/action_fragment_timeline_to_fragment_favorites"
            app:destination="@id/fragment_favorites" />
        <action
            android:id="@+id/action_fragment_timeline_to_fragment_map"
            app:destination="@id/fragment_map" />
        <action
            android:id="@id/action_fragment_timeline_to_fragment_add_event"
            app:destination="@id/fragment_add_event" />
        <action
            android:id="@+id/action_fragment_timeline_to_addEventFragment"
            app:destination="@id/addEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/fragment_favorites"
        android:name="dk.itu.moapd.copenhagenbuzz.frnw.fragments.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_fragment_favorites_to_addEventFragment"
            app:destination="@id/addEventFragment" />
        <action
            android:id="@+id/action_fragment_favorites_to_fragment_timeline"
            app:destination="@id/fragment_timeline" />
        <action
            android:id="@+id/action_fragment_favorites_to_fragment_map"
            app:destination="@id/fragment_map" />
    </fragment>

    <fragment
        android:id="@+id/fragment_map"
        android:name="dk.itu.moapd.copenhagenbuzz.frnw.fragments.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_fragment_map_to_fragment_timeline"
            app:destination="@id/fragment_timeline" />
        <action
            android:id="@+id/action_fragment_map_to_fragment_favorites"
            app:destination="@id/fragment_favorites" />
    </fragment>
    <fragment
        android:id="@+id/addEventFragment"
        android:name="dk.itu.moapd.copenhagenbuzz.frnw.fragments.AddEventFragment"
        android:label="fragment_add_event"
        tools:layout="@layout/fragment_add_event" >
        <action
            android:id="@+id/action_addEventFragment_to_fragment_timeline"
            app:destination="@id/fragment_timeline" />
        <action
            android:id="@+id/action_addEventFragment_to_fragment_favorites"
            app:destination="@id/fragment_favorites" />
        <action
            android:id="@+id/action_addEventFragment_to_fragment_map"
            app:destination="@id/fragment_map" />
    </fragment>
</navigation>
